Fix the spacing in the header

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
     justify-content: space-between;
 }
 .logo{
-        font-size: 50px;
+    font-size: 50px;
 }
 .menu{
     display: flex;
@@ -44,6 +44,7 @@ body{
     display:flex;
     flex-direction: column;
     max-width: 60%;
+    gap: 10px;
 }
 .left-side .title{
     font-size:25px;
